--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # HTTP Package for requests
+  http: ^0.12.0+4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
