--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  # HTTP Package for requests
+  # HTTP library for requests
   http: ^0.12.0+4
+
+  # Share code link
+  share: ^0.6.3+6
 
 dev_dependencies:
   flutter_test:
