--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Code Go on the go.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+9
+version: 1.0.1+10
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -29,6 +29,9 @@ dependencies:
 
   # Share code link
   share: ^0.6.3+6
+
+  # Save user code
+  # shared_preferences: ^0.5.6+2
 
 dev_dependencies:
   flutter_test:
